<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".IssuesActivity"
    android:background="@color/prim2">

    <EditText
        android:id="@+id/ETTPAadress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/enter_the_address_of_the_location"
        android:inputType="textPostalAddress"
        android:textStyle="bold" />

    <Button
        android:id="@+id/BTNadress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:text="@string/click_here_to_use_location_instead"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/please_rate_the_condition_of_the_facility"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="normal|bold" />

    <RadioGroup
        android:id="@+id/RGcondition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false">

        <RadioButton
            android:id="@+id/RBcritical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/critical"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            android:onClick="checkButton"/>

        <RadioButton
            android:id="@+id/RBunusable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/unusable"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            android:onClick="checkButton"/>

        <RadioButton
            android:id="@+id/RBpartially"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/partially_usable"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            android:onClick="checkButton"/>

    </RadioGroup>

    <EditText
        android:id="@+id/ETDdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="Date of picture taken"
        android:inputType="date"
        android:textStyle="bold" />

    <Button
        android:id="@+id/BTNdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:text="Use today's date"
        android:textStyle="bold" />

    <Button
        android:id="@+id/BTNsubmitIssues"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:text="Submit"
        android:textStyle="bold"
        app:backgroundTint="@color/green" />

</LinearLayout>